Added HTML Structure for Main Section

--- a/index.html
+++ b/index.html
@@ -20,5 +20,91 @@
         <button>Log In</button>
         <button>Sign Up</button>
     </header>
+
+    <main>
+        <section class="description">
+            <div class="text">
+                <h1>The intelligent, open knowledge base</h1>
+                <p>Explore the world's first self-constructing knowledge database built by artificial and human intelligence.</p>
+                <button>Explore</button>
+            </div>
+            <img src="" alt="Lines and circles">
+        </section>
+
+        <section class="description-2">
+            <div class="text">
+                <h1>Unique knowledge at your fingertips</h1>
+                <p>Access a growing body of knowledge. Follow topics you're interested in. Explore new topics to create a personalized knowledge feed.</p>
+                <button>Learn More</button>
+            </div>
+            <img src="" alt="Scrolling Gif">
+        </section>
+
+        <section class="join-us">
+            <img src="" alt="Man and Robot">
+            <div class="text">
+                <h1>Join a community of informed contributors</h1>
+                <p>Come help contribute to our growing index of topics using our machine-enhanced knowledge production tool.</p>
+                <button>See Features</button>
+            </div>
+        </section>
+
+        <section class="companies">
+            <div class="text">
+                <h1>Golden for companies</h1>
+                <p>See how Golden can improve your company's productivity and decision-making process.</p>
+                <div class="grid">
+                    <div>Investment Banking</div>
+                    <div>Hedge Funds</div>
+                    <div>Private Equity</div>
+                    <div>Insurance</div>
+                    <div>Media and Telecoms</div>
+                    <div>Consultancies</div>
+                    <div>Life Sciences</div>
+                    <div>Industrials</div>
+                </div>
+                <button>Learn More!</button>
+        </section>
+
+        <section class="testimonials">
+            <h1>Testimonials</h1>
+            <div class="carousel">
+
+            </div>
+        </section>
+
+        <section class="ai">
+            <div class="text">
+                <h1>Use AI to accelerate your research</h1>
+                <p>
+                    Golden extracts and structures information in meaningful ways to help analyze trends and patterns among target entities. From topic prediction and extraction to taxonomic detection, Golden connects to real-time sources of data to populate its knowledge base.
+                </p>
+            </div>
+            <img src="" alt="Linked Images">
+        </section>
+
+        <section class="trust">
+
+        </section>
+
+        <section class="investors">
+
+        </section>
+
+        <section class="database">
+            <div class="text">
+                <h1>Get access to a smart knowledge database</h1>
+                <p>
+                    Explore what exists in Golden today. Sign up to contribute your knowledge.
+                </p>
+                <button>Explore</button>
+            </div>
+            <img src="" alt="Triangles and Circles">
+        </section>
+
+        <footer>
+
+        </footer>
+    </main>
 </body>
 </html>
