--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/73b6093a8c.js"></script>
+    <link rel="stylesheet" href="./css/index.css">
     <title>Home | Golden</title>
 </head>
 <body>
     <header>
-        <img src="" alt="Logo">
-        <div class="searchbar">SEARCH</div>
+        <img src="./img/golden-logo.png" alt="Logo" width= "122rem">
+        <div class="search-button">
+            <input type="text" placeholder="Search for knowledge"/> 
+            <i class="fas fa-search"></i>
+        </div>
         <nav>
             <a href="#">Explore</a>
             <a href="#">About</a>
@@ -17,8 +22,8 @@
             <a href="#">Pricing</a>
             <a href="#">Enterprise</a>
         </nav>
-        <button>Log In</button>
-        <button>Sign Up</button>
+        <button class="log-in">Log In</button>
+        <button class="sign-up">Sign Up</button>
     </header>
 
     <main>
@@ -26,26 +31,32 @@
             <div class="text">
                 <h1>The intelligent, open knowledge base</h1>
                 <p>Explore the world's first self-constructing knowledge database built by artificial and human intelligence.</p>
-                <button>Explore</button>
+                <button>Explore<i class="fas fa-long-arrow-alt-right" style="font-size: 30px; margin-left: 100px"></i>
+                </button>
             </div>
-            <img src="" alt="Lines and circles">
+            <img src="./img/hero-min.png" alt="Lines and circles">
         </section>
+
+        <button class="feedback"><i class="far fa-question-circle" style="margin-right: 30px"></i>Feedback</button>
 
         <section class="description-2">
             <div class="text">
                 <h1>Unique knowledge at your fingertips</h1>
                 <p>Access a growing body of knowledge. Follow topics you're interested in. Explore new topics to create a personalized knowledge feed.</p>
-                <button>Learn More</button>
+                <button>Learn More<i class="fas fa-long-arrow-alt-right" style="font-size: 30px;margin-left: 70px"></i></button>
             </div>
-            <img src="" alt="Scrolling Gif">
+            <video  autoplay loop>
+                <source src="img/homepage-features-video4.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video>        
         </section>
 
         <section class="join-us">
-            <img src="" alt="Man and Robot">
+            <img src="./img/community-min.png" alt="Man and Robot">
             <div class="text">
                 <h1>Join a community of informed contributors</h1>
                 <p>Come help contribute to our growing index of topics using our machine-enhanced knowledge production tool.</p>
-                <button>See Features</button>
+                <button>See Features<i class="fas fa-long-arrow-alt-right" style="font-size: 30px;margin-left: 50px"></i></button>
             </div>
         </section>
 
@@ -54,52 +65,40 @@
                 <h1>Golden for companies</h1>
                 <p>See how Golden can improve your company's productivity and decision-making process.</p>
                 <div class="grid">
-                    <div>Investment Banking</div>
-                    <div>Hedge Funds</div>
-                    <div>Private Equity</div>
-                    <div>Insurance</div>
-                    <div>Media and Telecoms</div>
-                    <div>Consultancies</div>
-                    <div>Life Sciences</div>
-                    <div>Industrials</div>
+                    <div class="grid-element">
+                        <i class="fas fa-calculator"></i>
+                        <p>Investment Banking</p>
+                    </div>
+                    <div class="grid-element">
+                        <i class="fas fa-chart-line"></i>
+                        <p>Hedge Funds</p>
+                    </div>
+                    <div class="grid-element">
+                        <i class="far fa-chart-bar"></i> 
+                        <p>Private</p>
+                    </div>
+                    <div class="grid-element">
+                        <i class="fas fa-umbrella"></i>
+                        <p>Insurance</p>
+                    </div>
+                    <div class="grid-element">
+                        <i class="fas fa-at"></i>
+                        <p>Media and Telecoms</p>
+                    </div>
+                    <div class="grid-element">
+                        <i class="fas fa-city"></i>
+                        <p>Consultancies</p>
+                    </div>
+                    <div class="grid-element">
+                        <i class="fas fa-microscope"></i>
+                        <p>Life Sciences</p>
+                    </div>
+                    <div class="grid-element">
+                        <i class="fas fa-industry"></i>
+                        <p>Industrials</p>
+                    </div>
                 </div>
-                <button>Learn More!</button>
-        </section>
-
-        <section class="testimonials">
-            <h1>Testimonials</h1>
-            <div class="carousel">
-
-            </div>
-        </section>
-
-        <section class="ai">
-            <div class="text">
-                <h1>Use AI to accelerate your research</h1>
-                <p>
-                    Golden extracts and structures information in meaningful ways to help analyze trends and patterns among target entities. From topic prediction and extraction to taxonomic detection, Golden connects to real-time sources of data to populate its knowledge base.
-                </p>
-            </div>
-            <img src="" alt="Linked Images">
-        </section>
-
-        <section class="trust">
-
-        </section>
-
-        <section class="investors">
-
-        </section>
-
-        <section class="database">
-            <div class="text">
-                <h1>Get access to a smart knowledge database</h1>
-                <p>
-                    Explore what exists in Golden today. Sign up to contribute your knowledge.
-                </p>
-                <button>Explore</button>
-            </div>
-            <img src="" alt="Triangles and Circles">
+                <button>Learn more<i class="fas fa-long-arrow-alt-right" style="font-size: 30px;margin-left: 70px"></i></button>
         </section>
 
         <footer>
